--- a/.config/hypr/confs/window-decor.conf
+++ b/.config/hypr/confs/window-decor.conf
@@ -12,7 +12,7 @@ general {
 
 decoration {
 
-    rounding = 3
+    rounding = 7
 
     blur {
         enabled = true
@@ -21,10 +21,12 @@ decoration {
         new_optimizations = true
     }
 
-    blurls = lockscreen
+   blurls = lockscreen
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 4
-    col.shadow = rgba(bb9fc2ff)
+   shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(bb9fc2ff)
+   }
 }
